# scitex-config

./: README.md  codecov.yml  pyproject.toml
.github/workflows/: auto-merge-green.yml  cla.yml  import-smoke-on-ubuntu-py3-12.yml  publish-pypi.yml  pypi-publish-and-github-release-on-tag.yml  pytest-matrix-on-ubuntu-py3-11-3-12-3-13.yml  rtd-sphinx-build-on-ubuntu-latest.yml  scitex-config-quality-audit-on-ubuntu-latest.yml
docs/sphinx/: api.rst  conf.py  index.rst
examples/: quickstart.py
src/scitex_config/: _PriorityConfig.py  _ScitexConfig.py  __init__.py  _env_loader.py  _paths.py
src/scitex_config/_ecosystem/: __init__.py  _local_state.py
src/scitex_config/_skills/scitex-config/: 01_installation.md  02_quick-start.md  03_python-api.md  SKILL.md
src/scitex_config/_sphinx_html/: .buildinfo  api.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
src/scitex_config/_sphinx_html/.doctrees/: api.doctree  index.doctree
src/scitex_config/_sphinx_html/.doctrees/api/: scitex_config.doctree
src/scitex_config/_sphinx_html/_modules/: index.html
src/scitex_config/_sphinx_html/_modules/scitex_config/: _PriorityConfig.html  _ScitexConfig.html  _env_loader.html  _paths.html
src/scitex_config/_sphinx_html/_sources/: index.rst.txt
src/scitex_config/_sphinx_html/_sources/api/: scitex_config.rst.txt
src/scitex_config/_sphinx_html/api/: scitex_config.html
tests/: test_local_state.py
tests/develop/: test_audit.py
tests/scitex_config/: test__PriorityConfig.py  test__ScitexConfig.py  test__env_loader.py  test__paths.py
